# ape-zksync

./: pyproject.toml
ape_zksync/: __init__.py  __main__.py  config.py  ecosystem.py  provider.py
ape_zksync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/functional/: test_provider.py
