[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ape-zksync"
version = "0.1.0"
description = "zkSync Era plugin for Ape Framework"
license = {text = "Apache-2.0"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
dependencies = [
    "eth-ape>=0.7,<0.8",
    "zksync2>=2.0.0,<3.0",
]

[project.optional-dependencies]
lint = [
    "black>=23.0,<25",
    "flake8>=6.0,<8",
    "isort>=5.10,<6",
    "mypy>=1.0,<2",
]
test = [
    "pytest>=7.0",
    "pytest-ape",
    "pytest-xdist",
]
dev = [
    "ape-zksync[lint,test]",
]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[project.entry-points."ape_cli_subcommands"]
zksync = "ape_zksync.__main__:cli"

[project.entry-points."ape_plugins"]
zksync = "ape_zksync"
